--- a/static/TeleViewer.html
+++ b/static/TeleViewer.html
@@ -24,7 +24,10 @@
 
   <script src="js/socket.io-1.4.5.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <!--
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  -->
+  <script src="js/jquery-ui-1.11.4/jquery-ui.js"></script>
   <script src="Cesium/Cesium.js"></script>
   <style>
       @import url(Cesium/Widgets/widgets.css);
