--- a/static/TeleViewer.html
+++ b/static/TeleViewer.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9MEYS9F6W2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9MEYS9F6W2');
+</script>
   
   <!-- Use correct character set. -->
   <meta charset="utf-8">
